color contrast corrected

--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -1,7 +1,7 @@
 :root {
     --primary-color: #074e07;
-    --secondary-color: #e49d63;
-    --accent1-color: #264653;
+    --secondary-color: #f5b37e;
+    --accent1-color: #172a31;
     --accent2-color: #3d2d04;
     --heading-font: "Times New Roman", "Georgia", serif;
     --body-font: Arial, Helvetica, sans-serif;
@@ -123,5 +123,6 @@ h2 {
 .hero article p {
     font-size: 18px;
     flex: 1;
+    color: var(--accent1-color);
 
 }
